<resources>
    <string name="app_name">My Transfer App</string>

    <string name="newGuest_name_hint">Enter guest name</string>
    <string name="newGuest_saveButton">Save Guest</string>
    <string name="newGuest_flightNumber_hint">Flight number:</string>
    <string name="newGuest_trainNumber_hint">Train number:</string>
    <string name="newGuest_shipLineNumber_hint">Line number:</string>
    <string name="newGuest_busCompany_hint">Bus company:</string>
    <string name="newGuest_arrivesFrom_hint">Arrives from:</string>
    <string name="newGuest_dateAndTimeOfArrival_hint">Date and time of arrival:</string>
    <string name="newGuest_driver_hint">Driver: </string>
    <string name="newGuest_note_hint">Note: </string>
    <string name="newGuest_sendInfo_hint">Send message to driver: </string>
    <string name="newGuest_trainOnStation_hint">On station: </string>
    <string name="newGuest_shipOnPort_hint">In the port: </string>

    <string name="homescreenItem_city_hint">City: </string>
    <string name="homescreenItem_fl_number_hint">Fl. number: </string>
    <string name="homescreenItem_date_and_time_hint">Date and time: </string>
    <string name="homescreenItem_date_and_time_formatText" translatable="false">%s %s</string>
    <string name="homescreen_button_text">Add new</string>
    <string name="homescreen_driver_hint">Drivers menu</string>
    <string name="homescreen_title" translatable="false">My Transfer App</string>

    <string name="messageInfo_guestName_hint">Guest name: </string>
    <string name="messageInfo_arrival_hint">Arrives from: </string>
    <string name="messageInfo_flightNumber_hint">Flight number: </string>
    <string name="messageInfo_busCompany_hint">Bus company: </string>
    <string name="messageInfo_shipNumber_hint">Line number: </string>
    <string name="messageInfo_trainNumber_hint">Train number: </string>
    <string name="messageInfo_dateAndTimeOfArrival">Date and time: </string>
    <string name="meansoftransport_meansOfTransport_hint">The guest arrives with:</string>

    <string name="airplaneOrBus_messageBody" translatable="false">
        %s %s
        \n%s%s
        \n%s%s
        \n%s\n%s %s
        \n%s %s
    </string>

    <string name="shipOrTrain_messageBody" translatable="false">
        %s%s
        \n%s%s
        \n%s%s
        \n%s%s
        \n%s\n%s %s
        \n%s %s
    </string>

    <string name="apartmentInfo_messageBody" translatable="false">
        %s %s
        \n%s %s
        \n%s %s
        \n%s %s
        \n%s %s
        %s
    </string>
    <string name="add_new">Add new</string>

    <string name="notification_description">You have one or more guests arriving in 2 days or less, did you notify the driver?</string>
    <string name="phone_number">Phone number:</string>
    <string name="delete_driver_confirmation">Delete driver %s from driver list?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="driver_already_exists">Driver already exists, choose different name:</string>
    <string name="name_cannot_be_empty">Name can\'t be empty</string>
    <string name="delete_guest">Delete guest?</string>
    <string name="delete_apartment">Delete apartment?</string>
    <string name="send_info_to_driver">Send guest info to %s?</string>
    <string name="driver_also_exists">Driver with that name also exists</string>
    <string name="enter_different_name">Please enter different driver name:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    
    <string name="apartment_name_hint">Apartment:</string>
    <string name="apartment_city_hint">City:</string>
    <string name="apartment_address_hint">Address:</string>
    <string name="apartment_owner_hint">Owner:</string>
    <string name="apartment_owner_contact_hint">Phone:</string>
    <string name="choose_an_apartment">Choose an apartment</string>
    <string name="to_apartment">To apartment:</string>
    <string name="from_apartment">From apartment:</string>
    <string name="apartment_name">Apartment name:</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="note">Note:</string>
    <string name="city">City:</string>
    <string name="owner">Owner</string>

</resources>
