<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#391864">

        <ImageView
            android:id="@+id/newguestshiptrainscreen_top_icon"
            android:layout_width="88dp"
            android:layout_height="38dp"
            android:layout_marginStart="15dp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newguestshiptrainscreen_app_icon" />


        <ImageView
            android:id="@+id/newguestshiptrainscreen_app_icon"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="26dp"
            android:src="@drawable/app_icon"
            app:layout_constraintBottom_toTopOf="@id/newguestshiptrainscreen_top_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/newguestshiptrainscreen_top_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/newguestshiptrainscreen_cancel_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newguestshiptrainscreen_app_icon" />

        <View
            android:id="@+id/newguestshiptrainscreen_save_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/newguestshiptrainscreen_cancel_button"
            app:layout_constraintTop_toBottomOf="@id/newguestshiptrainscreen_app_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#391864">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/newguestshiptrainscreen_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:background="@drawable/new_guest_info_background"
                android:paddingVertical="20dp">

                <TextView
                    android:id="@+id/newguestshiptrainscreen_guestName_hint"
                    style="@style/homescreen_items_guest_information_hint_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="11dp"
                    android:paddingTop="5dp"
                    android:text="@string/messageInfo_guestName_hint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/newguestshiptrainscreen_driverName_editText"
                    style="@style/transferpal_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:layout_marginEnd="13dp"
                    android:imeOptions="actionNext"
                    android:paddingHorizontal="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/newguestshiptrainscreen_guestName_hint" />

                <TextView
                    android:id="@+id/newguestshiptrainscreen_trainOrShipNumber_hint"
                    style="@style/homescreen_items_guest_information_hint_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="11dp"
                    android:paddingTop="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/newguestshiptrainscreen_driverName_editText" />

                <EditText
                    android:id="@+id/newguestshiptrainscreen_trainOrShipNumber_editText"
                    style="@style/transferpal_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:layout_marginEnd="13dp"
                    android:imeOptions="actionNext"
                    android:paddingHorizontal="10dp"
                    app:layout_constraintEnd_toStartOf="@id/newguestshiptrainscreen_portOrStation_editText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/newguestshiptrainscreen_trainOrShipNumber_hint" />

                <TextView
                    android:id="@+id/newguestshiptrainscreen_portOrStation_hint"
                    style="@style/homescreen_items_guest_information_hint_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    app:layout_constraintStart_toStartOf="@id/newguestshiptrainscreen_portOrStation_editText"
                    app:layout_constraintTop_toBottomOf="@id/newguestshiptrainscreen_driverName_editText" />

                <EditText
                    android:id="@+id/newguestshiptrainscreen_portOrStation_editText"
                    style="@style/transferpal_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="13dp"
                    android:imeOptions="actionNext"
                    android:paddingHorizontal="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/newguestshiptrainscreen_trainOrShipNumber_editText"
                    app:layout_constraintTop_toBottomOf="@id/newguestshiptrainscreen_trainOrShipNumber_hint" />

                <TextView
                    android:id="@+id/newguestshiptrainscreen_arrivesFrom_hint"
                    style="@style/homescreen_items_guest_information_hint_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="11dp"
                    android:paddingTop="5dp"
                    android:text="@string/newGuest_arrivesFrom_hint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/newguestshiptrainscreen_trainOrShipNumber_editText" />

                <EditText
                    android:id="@+id/newguestshiptrainscreen_arrivesFrom_editText"
                    style="@style/transferpal_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:layout_marginEnd="13dp"
                    android:imeOptions="actionDone"
                    android:paddingHorizontal="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/newguestshiptrainscreen_arrivesFrom_hint" />

                <TextView
                    android:id="@+id/newguestshiptrainscreen_dateAndTimeOfArrival_hint"
                    style="@style/homescreen_items_guest_information_hint_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="11dp"
                    android:paddingTop="5dp"
                    android:text="@string/newGuest_dateAndTimeOfArrival_hint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/newguestshiptrainscreen_arrivesFrom_editText" />

                <EditText
                    android:id="@+id/newguestshiptrainscreen_dateOfArrival_editText"
                    style="@style/transferpal_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:layout_marginEnd="13dp"
                    android:focusableInTouchMode="false"
                    android:paddingHorizontal="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/newguestshiptrainscreen_timeOfArrival_editText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/newguestshiptrainscreen_dateAndTimeOfArrival_hint" />

                <EditText
                    android:id="@+id/newguestshiptrainscreen_timeOfArrival_editText"
                    style="@style/transferpal_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:layout_marginEnd="13dp"
                    android:focusableInTouchMode="false"
                    android:inputType="time"
                    android:paddingHorizontal="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/newguestshiptrainscreen_dateOfArrival_editText"
                    app:layout_constraintTop_toBottomOf="@id/newguestshiptrainscreen_dateAndTimeOfArrival_hint" />

                <TextView
                    android:id="@+id/newguestshiptrainscreen_driver_hint"
                    style="@style/homescreen_items_guest_information_hint_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="11dp"
                    android:paddingTop="5dp"
                    android:text="@string/newGuest_driver_hint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/newguestshiptrainscreen_dateOfArrival_editText" />


                <EditText
                    android:id="@+id/newguestshiptrainscreen_driver_editText"
                    style="@style/transferpal_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:layout_marginEnd="13dp"
                    android:focusableInTouchMode="false"
                    android:imeOptions="actionNext"
                    android:paddingHorizontal="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/newguestshiptrainscreen_driver_hint" />

                <TextView
                    android:id="@+id/newguestshiptrainscreen_note_hint"
                    style="@style/homescreen_items_guest_information_hint_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="11dp"
                    android:paddingTop="5dp"
                    android:text="@string/newGuest_note_hint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/newguestshiptrainscreen_driver_editText" />

                <EditText
                    android:id="@+id/newguestshiptrainscreen_note_editText"
                    style="@style/transferpal_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:layout_marginEnd="13dp"
                    android:imeOptions="actionDone"
                    android:paddingHorizontal="10dp"
                    app:layout_constraintBottom_toTopOf="@id/newguestshiptrainscreen_sendinfo_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/newguestshiptrainscreen_note_hint" />

                <View
                    android:id="@+id/newguestshiptrainscreen_sendinfo_button"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/ic_outgoing_call"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/newguestshiptrainscreen_sendinfo_hint"
                    app:layout_constraintTop_toBottomOf="@+id/newguestshiptrainscreen_note_editText" />

                <TextView
                    android:id="@+id/newguestshiptrainscreen_sendinfo_hint"
                    style="@style/homescreen_items_guest_information_hint_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:text="@string/newGuest_sendInfo_hint"
                    app:layout_constraintBottom_toBottomOf="@id/newguestshiptrainscreen_sendinfo_button"
                    app:layout_constraintEnd_toStartOf="@id/newguestshiptrainscreen_sendinfo_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/newguestshiptrainscreen_sendinfo_button" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/newguestshiptrainscreen_icon_bottom"
                android:layout_width="82dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
